<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:background="@color/bgcolor"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:text="@string/systeminfo"
        android:textColor="@color/model"
        android:textSize="10pt"
        android:layout_gravity="center_horizontal" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableRow1"
        android:layout_marginTop="10dp"

        >

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/model"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/model" />

            <TextView
                android:id="@+id/TextView09"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="      "
                android:textColor="@color/model"
                android:layout_gravity="left"

                />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/model" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="       "
                android:layout_gravity="left"
                android:textColor="@color/model" />
        </TableRow>


        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manufact"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/model" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="      "
                android:layout_gravity="left"
                android:textColor="@color/model" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/os"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/model" />

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="        "
                android:layout_gravity="left"
                android:textColor="@color/model" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/TextView07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_below="@+id/button1"
        android:text="@string/status"
        android:layout_marginTop="0dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/model"

        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView07"
        android:layout_centerHorizontal="true"
        android:background="@drawable/checknow"
        android:layout_marginTop="15dp"
        android:minHeight="100dp"
        android:text=" "
        android:layout_gravity="center_horizontal" />
    <!---
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        android:layout_weight="0">

    </com.google.android.gms.ads.AdView>-->




</LinearLayout>

